--- a/drone/values.yaml
+++ b/drone/values.yaml
@@ -167,6 +167,8 @@ env:
   ##
   DRONE_SERVER_PROTO: https
 
+  DRONE_LOGS_DEBUG: true
+
   ## REQUIRED: Set the secret secret token that the Drone server and its Runners will use
   ## to authenticate. This is commented out in order to leave you the ability to set the
   ## key via a separately provisioned secret (see existingSecretName above).
