--- a/myapp/.drone.yaml
+++ b/myapp/.drone.yaml
@@ -12,7 +12,7 @@ steps:
 - name: publish
  image: plugins/docker
  settings:
-   repo: magalixcorp/k8scicd
+   repo: sorted78/vmware-demo
    tags: [ "${DRONE_COMMIT_SHA:0:7}","latest" ]
    username:
      from_secret: docker_username
