--- a/myapp/.drone.yaml
+++ b/myapp/.drone.yaml
@@ -1,32 +1,29 @@
----
 kind: pipeline
-type: kubernetes
-name: default
-
+name: Pipeline
+  
 steps:
-- name: build-push
-  image: docker:dind
-  volumes:
-  - name: dockersock
-    path: /var/run
-  environment:
-    DOCKER_USER:
-      from_secret: DOCKER_USER
-    DOCKER_PASSWORD:
-      from_secret: DOCKER_PASSWORD
-  commands:
-  - sleep 5 # give docker enough time to start
-  - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-  - docker build ./golang -t aimvector/golang:1.0.0
-  - docker push aimvector/golang:1.0.0
 
-services:
-- name: docker
-  image: docker:dind
-  privileged: true
-  volumes:
-  - name: dockersock
-    path: /var/run
-volumes:
-- name: dockersock
-  temp: {}
+- name: testing
+  image: golang
+  commands:
+  - go test
+      
+- name: build
+  image: golang
+  commands:
+  - go build -o ./myapp
+  
+- name: publish
+  image: plugins/docker
+  settings:
+    username:
+      from_secret: DOCKER_USERNAME
+    password:
+      from_secret: DOCKER_PASSWORD
+    repo: sorted78/vmware-demo
+    tags:
+      - 1.0.2
+      - latest
+  when:
+    branch:
+    - master
