--- a/drone-runner-kube/values.yaml
+++ b/drone-runner-kube/values.yaml
@@ -128,4 +128,4 @@ env:
   ## Determines the default Kubernetes namespace for Drone builds to run in.
   ## Ref: https://kube-runner.docs.drone.io/installation/reference/drone-namespace-default/
   ##
-  DRONE_NAMESPACE_DEFAULT: drone
+  DRONE_NAMESPACE_DEFAULT: default
