--- a/myapp/.drone.yaml
+++ b/myapp/.drone.yaml
@@ -1,32 +1,19 @@
----
-kind: pipeline
-type: kubernetes
 name: default
 
-steps:
-- name: build-push
-  image: docker:dind
-  volumes:
-  - name: dockersock
-    path: /var/run
-  environment:
-    DOCKER_USER:
-      from_secret: DOCKER_USER
-    DOCKER_PASSWORD:
-      from_secret: DOCKER_PASSWORD
-  commands:
-  - sleep 5 ## give docker enough time to start
-  - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-  - docker build ./golang -t aimvector/golang:1.0.0
-  - docker push aimvector/golang:1.0.0
+kind: pipeline
+type: docker
 
-services:
-- name: docker
-  image: docker:dind
-  privileged: true
-  volumes:
-  - name: dockersock
-    path: /var/run
-volumes:
-- name: dockersock
-  temp: {}
+steps:
+- name: backend
+  image: golang
+  commands:
+    - go get
+    - go build ./myapp
+    - go test
+
+- name: publish
+  image: plugins/docker
+  settings:
+    repo: sorted78/vmware-demo
+    tags: [ 1, 1.1, latest ]
+    registry: index.docker.io
