--- a/myapp/.drone.yaml
+++ b/myapp/.drone.yaml
@@ -1,11 +1,12 @@
 kind: pipeline
+type: kubernetes
 name: default
 steps:
 - name: test
  image: golang:1.10-alpine
  commands:
-   - "go test"
+   - go test
 - name: build
  image: golang:1.10-alpine
  commands:
-   - "go build -o ./myapp"
+   - go build -o ./myapp
