--- a/myapp/.drone.yaml
+++ b/myapp/.drone.yaml
@@ -16,7 +16,7 @@ steps:
       from_secret: DOCKER_PASSWORD
   commands:
   - sleep 5 ## give docker enough time to start
-  - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+  #- docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
   - docker build ./golang -t aimvector/golang:1.0.0
   #- docker push aimvector/golang:1.0.0
 
