--- a/service.yaml
+++ b/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: vmware-demp
+  name: dempo
 spec:
   ports:
   - port: 8080
     targetPort: 8080
   selector:
-    app: vmware-demo
+    app: demo
